projects: fix background image alignment

--- a/src/sass/projects.scss
+++ b/src/sass/projects.scss
@@ -49,6 +49,14 @@
   }
 }
 
+.left {
+  background-position-x: 100%;
+}
+
+.right {
+  background-position-x: 0px;
+}
+
 .current {
   flex: 1 0 40vw;
   height: 22.5vw;
